# team-14

./: README.md  hack-project.jsonc  vote-description.md
mind-fist-notification-service2/: README.md  base_start.sh  requirements.txt  temp.ipynb
mind-fist-notification-service2/src/: .env  main.py  notification_stream.py  temp.py
mind-sift-backend2/: README.md  pyproject.toml
mind-sift-backend2/app/: server.py  utils.py
mind-sift-backend2/app/chains/: classification.py  clustering.py  summarization.py
mind-sift-backend2/app/chat_models/: default.py
mind-sift-backend2/app/dtos/: clustering.py  notification.py
mind-sift-backend2/app/entrypoints/: lambda.py
mind-sift-backend2/app/models/: dismissal_evaluator.py  notification_summary.py
mind-sift-backend2/app/prompts/: dismissal_evaluator.py  reduce.py  rule_description.py  summary.py
mind-sift-backend2/scripts/: deploy_cloud_run.sh
mind-sift-frontend2/: package-lock.json  package.json  tailwind.config.ts
mind-sift-frontend2/src/app/: globals.css  layout.tsx  page.tsx
mind-sift-frontend2/src/app/api/categories/: route.ts
mind-sift-frontend2/src/components/: list-container.tsx  list-item.tsx  multi-select.tsx  toggle-list-item.tsx
mind-sift-frontend2/src/components/ui/: switch.tsx
