[tool.poetry]
name = "mind-sift"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {version = ">=0.3,<1.0", extras = ["server"]}
langchain-aws = "^0.2.7"
mangum = "^0.19.0"
langchain = "^0.3.8"
langchain-milvus = "^0.1.7"
scikit-learn = "^1.5.2"
supabase = "^2.10.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
